--- a/OLX-copy/Views/RegistrationWindow.xaml
+++ b/OLX-copy/Views/RegistrationWindow.xaml
@@ -2,7 +2,8 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:vm="clr-namespace:OLX_copy.ViewModels"
-        Title="RegistrationWindow" Height="700" Width="1000">
+        Title="RegistrationWindow" Height="700" Width="1000"
+        WindowStartupLocation="CenterScreen">
 
     <Window.Resources>
         <BooleanToVisibilityConverter x:Key="BoolToVis"/>
